wip: Add IOCP.Winsock

--- a/windows-iocp.cabal
+++ b/windows-iocp.cabal
@@ -21,6 +21,7 @@ library
     exposed-modules:
         IOCP.Bindings
         IOCP.Windows
+        IOCP.Winsock
         IOCP.Winsock.Types
 
     build-tools: hsc2hs
