--- a/windows-iocp.cabal
+++ b/windows-iocp.cabal
@@ -38,3 +38,15 @@ library
     extra-libraries: ws2_32
 
     default-language: Haskell2010
+
+test-suite test
+    type:           exitcode-stdio-1.0
+    hs-source-dirs: test
+    main-is:        Main.hs
+
+    build-depends: base
+                 , windows-iocp
+
+    ghc-options: -Wall -fwarn-tabs
+
+    default-language: Haskell2010
