Add IOCP.Winsock.Bindings, currently a conversion of Winsock.c to Haskell
Right now, this will fail on Windows XP.  Need to see what error is produced
when WSASendMsg comes up missing.

--- a/windows-iocp.cabal
+++ b/windows-iocp.cabal
@@ -25,6 +25,7 @@ library
         IOCP.Utils
         IOCP.Windows
         IOCP.Winsock
+        IOCP.Winsock.Bindings
         IOCP.Winsock.Types
 
     build-tools: hsc2hs
