Winsock.Bindings: add loadWinsock
Eventually, I plan to hide everything Bindings currently exports,
and have it export bindings that check for errors and call loadWinsock
themselves.

--- a/windows-iocp.cabal
+++ b/windows-iocp.cabal
@@ -31,6 +31,7 @@ library
     build-tools: hsc2hs
 
     ghc-options: -Wall -fwarn-tabs
+    cc-options: -Wall
 
     c-sources:
         cbits/iocp.c
