--- a/windows-iocp.cabal
+++ b/windows-iocp.cabal
@@ -21,7 +21,7 @@ source-repository head
 
 library
     exposed-modules:
-        IOCP.Bindings
+        IOCP.CompletionPort
         IOCP.Utils
         IOCP.Windows
         IOCP.Winsock
