--- a/windows-iocp.cabal
+++ b/windows-iocp.cabal
@@ -21,6 +21,7 @@ source-repository head
 
 library
     exposed-modules:
+        IOCP.Bindings
         IOCP.CompletionPort
         IOCP.Utils
         IOCP.Windows
@@ -28,6 +29,9 @@ library
         IOCP.Winsock.Bindings
         IOCP.Winsock.Load
         IOCP.Winsock.Types
+
+    other-modules:
+        IOCP.Types
 
     build-tools: hsc2hs
 
