Add IOCP.Manager (work in progress)

--- a/windows-iocp.cabal
+++ b/windows-iocp.cabal
@@ -23,6 +23,7 @@ library
     exposed-modules:
         IOCP.Bindings
         IOCP.CompletionPort
+        IOCP.Manager
         IOCP.Utils
         IOCP.Windows
         IOCP.Winsock
