windows-iocp.cabal: reindent, and change summary to "Scalable and interruptible network I/O for Windows"
This reflects a change in direction for this project.  Originally, it was a
playground for me to experiment.  Now, I have a narrow focus:

 * Implement (almost [^1]) drop-in replacements for connect, accept, recv,
   and send that use IOCP.  This means use the network package, even though
   there are plenty of things I'd like to change.

 * Get it working on Windows Vista first, where CancelIoEx is available and
   I/O bound for a completion port isn't canceled on thread exit.
   Windows XP support is still crucial, but I don't want the I/O manager
   design to revolve around it.

 * Only support -threaded.  This means start actions can be in Haskell.
   Under the non-threaded RTS and Windows XP, to recv and send
   simultaneously, we would need to send I/O start actions to another OS
   thread, and such actions would need to be in C.

[^1]: I say "almost" because the caller will still have to associate the
      socket handle with the completion port.  Otherwise, attempting I/O
      will hang or something.

--- a/windows-iocp.cabal
+++ b/windows-iocp.cabal
@@ -1,17 +1,17 @@
-name: windows-iocp
-version: 0.1
-synopsis: Playground for implementing interruptible I/O on Windows using completion ports
+name:               windows-iocp
+version:            0.1
+synopsis:           Scalable and interruptible network I/O for Windows
 -- description:
-homepage: https://github.com/joeyadams/hs-windows-iocp
-bug-reports: https://github.com/joeyadams/hs-windows-iocp/issues/new
-license: BSD3
-license-file: LICENSE
-author: Joey Adams
-maintainer: joeyadams3.14159@gmail.com
-copyright: Copyright (c) Joseph Adams 2013
-category: System
-build-type: Simple
-cabal-version: >= 1.14
+homepage:           https://github.com/joeyadams/hs-windows-iocp
+bug-reports:        https://github.com/joeyadams/hs-windows-iocp/issues/new
+license:            BSD3
+license-file:       LICENSE
+author:             Joey Adams
+maintainer:         joeyadams3.14159@gmail.com
+copyright:          Copyright (c) Joseph Adams 2013
+category:           System
+build-type:         Simple
+cabal-version:      >= 1.14
 
 extra-source-files: include/iocp.h
 
