windows-iocp.cabal: add network package as dependency

--- a/windows-iocp.cabal
+++ b/windows-iocp.cabal
@@ -46,6 +46,7 @@ library
     includes: iocp.h errno-posix.h
 
     build-depends: base >= 4.6 && < 5
+                 , network
 
     extra-libraries: ws2_32
 
