--- a/windows-iocp.cabal
+++ b/windows-iocp.cabal
@@ -21,6 +21,7 @@ source-repository head
 
 library
     exposed-modules:
+        Network.Socket.Windows
         IOCP.Bindings
         IOCP.CompletionPort
         IOCP.Manager
