--- a/windows-iocp.cabal
+++ b/windows-iocp.cabal
@@ -23,11 +23,11 @@ library
     exposed-modules:
         Network.Socket.Windows
         IOCP.Manager
+        IOCP.Windows
 
     other-modules:
         IOCP.CompletionPort
         IOCP.Utils
-        IOCP.Windows
         IOCP.Winsock.Mswsock
         IOCP.Winsock.Types
 
@@ -50,17 +50,14 @@ library
 
     default-language: Haskell2010
 
--- Cabal doesn't let the test suite import hidden modules,
--- so it is disabled for now.
---
--- test-suite test
---     type:           exitcode-stdio-1.0
---     hs-source-dirs: test
---     main-is:        Main.hs
---
---     build-depends: base
---                  , windows-iocp
---
---     ghc-options: -Wall -fwarn-tabs
---
---     default-language: Haskell2010
+test-suite test
+    type:           exitcode-stdio-1.0
+    hs-source-dirs: test
+    main-is:        Main.hs
+
+    build-depends: base
+                 , windows-iocp
+
+    ghc-options: -Wall -fwarn-tabs
+
+    default-language: Haskell2010
