windows-iocp.cabal: remove "Scalable" from synopsis
This should be pretty scalable, but there's only one I\/O manager thread.
The "scalable" bit hasn't been tested, so don't advertise it yet.

--- a/windows-iocp.cabal
+++ b/windows-iocp.cabal
@@ -1,6 +1,6 @@
 name:               windows-iocp
 version:            0.1
-synopsis:           Scalable and interruptible network I/O for Windows
+synopsis:           Interruptible network I/O for Windows
 -- description:
 homepage:           https://github.com/joeyadams/hs-windows-iocp
 bug-reports:        https://github.com/joeyadams/hs-windows-iocp/issues/new
