--- a/windows-iocp.cabal
+++ b/windows-iocp.cabal
@@ -1,6 +1,6 @@
 name:               windows-iocp
 version:            0.1
-synopsis:           Interruptible network I/O for Windows
+synopsis:           I/O manager for Windows based on completion ports
 -- description:
 homepage:           https://github.com/joeyadams/hs-windows-iocp
 bug-reports:        https://github.com/joeyadams/hs-windows-iocp/issues/new
@@ -21,15 +21,12 @@ source-repository head
 
 library
     exposed-modules:
-        Network.Socket.Windows
         IOCP.Manager
         IOCP.Windows
 
     other-modules:
         IOCP.CompletionPort
         IOCP.Utils
-        IOCP.Winsock.Mswsock
-        IOCP.Winsock.Types
 
     build-tools: hsc2hs
 
@@ -44,9 +41,6 @@ library
 
     build-depends: base >= 4.6 && < 5
                  , bytestring
-                 , network >= 2.4.1.2
-
-    extra-libraries: ws2_32
 
     default-language: Haskell2010
 
